--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 131 - Dyamic Web Fundamentals - Prayer Marangwanda</title>
-    <meta name="description" content="This page">
+    <title>WDD 131 - Dynamic Web Fundamentals - Prayer Marangwanda</title>
+    <meta name="description" content="This WDD131 home page is made by Prayer Marangwanda, the purpose is to help users find the information they are looking for and take action">
+    <meta name="author" content="Prayer Marangwanda">">
     <meta name="author" content="Prayer Marangwanda">
     <link rel="stylesheet" href="styles/base.css">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +13,7 @@
 </head>
 <body>
     <header>
-       <h1 >WDD131: Dyamic Web Fundamentals - <span class="change">Prayer Marangwanda </span></h1>
+       <h1 >WDD131: Dynamic Web Fundamentals - <span class="change">Prayer Marangwanda </span></h1>
        <nav>
         <a href="https://www.linkedin.com">LinkedIn</a>
         <a href="https://byui.instructure.com/.">I-Learn</a>
