--- a/index.html
+++ b/index.html
@@ -3,17 +3,16 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 131 - Dynamic Web Fundamentals - Prayer Marangwanda</title>
-    <meta name="description" content="This WDD131 home page is made by Prayer Marangwanda, the purpose is to help users find the information they are looking for and take action">
-    <meta name="author" content="Prayer Marangwanda">">
+    <title>WDD131 : Dyamic Web Fundamentals | Week 01 Assignment : Home Page | Prayer Marangwanda</title>
+    <meta name="description" content="This WDD131 : Dynamic Web Fundamentals Assignment allows me to demonstrate
+    my prerequisite knowledge by applying HTML and CSS in the design and development
+    of a home page.">
     <meta name="author" content="Prayer Marangwanda">
     <link rel="stylesheet" href="styles/base.css">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-       <h1 >WDD131: Dynamic Web Fundamentals - <span class="change">Prayer Marangwanda </span></h1>
+       <h1 >WDD 131: Dynamic Web Fundamentals - <span class="change">Prayer Marangwanda </span></h1>
        <nav>
         <a href="https://www.linkedin.com">LinkedIn</a>
         <a href="https://byui.instructure.com/.">I-Learn</a>
@@ -27,7 +26,7 @@
         <div class="wrapper">
             <section class="card">
                 <div class="card-header">
-                    <h4>About Me</h4>
+                    <h2>About Me</h2>
                 </div>
                 <div class="card-content">
                     <img src="images/Screenshot_20231205-073005_WhatsApp.jpg" alt="Prayer Marangwanda">
@@ -40,9 +39,9 @@
                      </div>
                     
                      <div class="creation">
-                    <h2>South Africa
+                    <h3>South Africa
                     <hr>
-                    </h2>
+                    </h3>
                     <figure>
                         <figcaption>Official flag of South Africa</figcaption>
                      <img src="images/closeup-shot-realistic-flag-south-africa-with-interesting-textures.jpg" alt="South Africa">
@@ -64,7 +63,7 @@
               
             <section class="card">
                 <div class="card-header">
-                    <h3> Web Fundamentals</h3>
+                    <h4> Web Fundamentals</h4>
                 </div>
                 <div class="card-content">
                     <ul>
