--- a/index.html
+++ b/index.html
@@ -3,25 +3,23 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD131 : Dyamic Web Fundamentals | Week 01 Assignment : Home Page | Prayer Marangwanda</title>
-    <meta name="description" content="This WDD131 : Dynamic Web Fundamentals Assignment allows me to demonstrate
-    my prerequisite knowledge by applying HTML and CSS in the design and development
+    <title>WDD131 - Dynamic Web Fundamentals - Prayer Marangwanda</title>
+    <meta name="description" content="The WDD131  Dynamic Web Fundamentals Assignment allows one to demonstrate
+    the prerequisite knowledge by applying HTML and CSS in the design and development
     of a home page.">
-    <meta name="author" content="Prayer Marangwanda">
+    <meta name="author" content="Prayer Marangwanda.">
     <link rel="stylesheet" href="styles/base.css">
 </head>
 <body>
     <header>
-       <h1 >WDD 131: Dynamic Web Fundamentals - <span class="change">Prayer Marangwanda </span></h1>
+       <h1 >WDD 131 - Dynamic Web Fundamentals - <span class="change">Prayer Marangwanda </span></h1>
        <nav>
         <a href="https://www.linkedin.com">LinkedIn</a>
         <a href="https://byui.instructure.com/.">I-Learn</a>
         <a href="https://www.churchofjesuschrist.org/study/scriptures">Scripture</a>
         <a href="#">Final Project</a>
-    
        </nav>
     </header>
-
     <main>
         <div class="wrapper">
             <section class="card">
@@ -39,9 +37,8 @@
                      </div>
                     
                      <div class="creation">
-                    <h3>South Africa
+                    <h3>South Africa </h3>
                     <hr>
-                    </h3>
                     <figure>
                         <figcaption>Official flag of South Africa</figcaption>
                      <img src="images/closeup-shot-realistic-flag-south-africa-with-interesting-textures.jpg" alt="South Africa">
