--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-       <h1 >WDD 131 - Dynamic Web Fundamentals - <span class="change">Prayer Marangwanda</span></h1>
+       <h1>"WDD 131 - Dynamic Web Fundamentals - <span class="change">Prayer Marangwanda"</span></h1>
        <nav>
         <a href="https://www.linkedin.com">LinkedIn</a>
         <a href="https://byui.instructure.com/.">I-Learn</a>
@@ -27,7 +27,7 @@
         <div class="wrapper">
             <section class="card">
                 <div class="card-header">
-                    <h2>About Me</h2>
+                    <h2>"About Me"</h2>
                 </div>
                 <div class="card-content">
                     <img src="images/Screenshot_20231205-073005_WhatsApp.jpg" alt="Prayer Marangwanda">
