--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-       <h1>"WDD 131 - Dynamic Web Fundamentals - <span class="change">Prayer Marangwanda"</span></h1>
+       <h1>"WDD 131 - Dynamic Web Fundamentals -" <span class="change">"Prayer Marangwanda"</span></h1>
        <nav>
         <a href="https://www.linkedin.com">LinkedIn</a>
         <a href="https://byui.instructure.com/.">I-Learn</a>
