--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>"WDD 131 - Dynamic Web Fundamentals - Prayer Marangwanda"</title>
+    <title>WDD 131 - Dynamic Web Fundamentals - Prayer Marangwanda</title>
     <meta name="description" content="The WDD 131 and Dynamic Web Fundamentals Assignment allows one to demonstrate
     the prerequisite knowledge by applying HTML and CSS in the design and development
     of a home page.">
-    <meta name="author" content="Prayer Marangwanda.">
+    <meta name="author" content=Prayer Marangwanda>
     <link rel="stylesheet" href="styles/base.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-       <h1>"WDD 131 - Dynamic Web Fundamentals -" <span class="change">"Prayer Marangwanda"</span></h1>
+       <h1>WDD 131 - Dynamic Web Fundamentals - <span class="change">Prayer Marangwanda</span></h1>
        <nav>
         <a href="https://www.linkedin.com">LinkedIn</a>
         <a href="https://byui.instructure.com/.">I-Learn</a>
@@ -27,7 +27,7 @@
         <div class="wrapper">
             <section class="card">
                 <div class="card-header">
-                    <h2>"About Me"</h2>
+                 <h2>About Me</h2>
                 </div>
                 <div class="card-content">
                     <img src="images/Screenshot_20231205-073005_WhatsApp.jpg" alt="Prayer Marangwanda">
