--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="The WDD 131 and Dynamic Web Fundamentals Assignment allows one to demonstrate
     the prerequisite knowledge by applying HTML and CSS in the design and development
     of a home page.">
-    <meta name="author" content=Prayer Marangwanda>
+    <meta name="author" content="Prayer Marangwanda">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +27,7 @@
         <div class="wrapper">
             <section class="card">
                 <div class="card-header">
-                 <h2>About Me</h2>
+                 <h3>About Me</h3>
                 </div>
                 <div class="card-content">
                     <img src="images/Screenshot_20231205-073005_WhatsApp.jpg" alt="Prayer Marangwanda">
@@ -40,7 +40,7 @@
                      </div>
                     
                      <div class="creation">
-                    <h3>South Africa </h3>
+                    <h2>South Africa </h2>
                     <hr>
                     <figure>
                         <figcaption>Official flag of South Africa</figcaption>
