--- a/index.html
+++ b/index.html
@@ -82,6 +82,6 @@
         <p class="lastModified">Last Modification:  <span id="lastModified"></span></p>
     </footer>
     
-    <script src="scripts/getdates.js"></script>
+    <script defer="defer" src="scripts/getdates.js"></script>
 </body>
 </html>
