--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="wrapper">
             <section class="card">
                 <div class="card-header">
-                 <h2>About Me</h2>
+                 <p>About Me</p>
                 </div>
                 <div class="card-content">
                     <img src="images/Screenshot_20231205-073005_WhatsApp.jpg" alt="Prayer Marangwanda">
