--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="wrapper">
             <section class="card">
                 <div class="card-header">
-                 <p>About Me</p>
+                 <h2>About Me</h2>
                 </div>
                 <div class="card-content">
                     <img src="images/Screenshot_20231205-073005_WhatsApp.jpg" alt="Prayer Marangwanda">
@@ -63,7 +63,7 @@
               
             <section class="card">
                 <div class="card-header">
-                    <h4> Web Fundamentals</h4>
+                    <h2> Web Fundamentals</h2>
                 </div>
                 <div class="card-content">
                     <ul>
