--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>"WDD 131 - Dynamic Web Fundamentals - Prayer Marangwanda".</title>
+    <title>"WDD 131 - Dynamic Web Fundamentals - Prayer Marangwanda."</title>
     <meta name="description" content="The WDD 131 and Dynamic Web Fundamentals Assignment allows one to demonstrate
     the prerequisite knowledge by applying HTML and CSS in the design and development
     of a home page.">
