--- a/temples.html
+++ b/temples.html
@@ -33,42 +33,42 @@
     <h2>Home</h2>
     <div class="container">
     <figure>
-    <img src="images/IMG-20240505-WA0002.jpg" alt="Colobia Temple" width="300px">
+    <img src="images/IMG-20240505-WA0002.jpg" alt="Colobia Temple" width="300">
     <figcaption> Colobia Temple</figcaption>
     </figure>
 
     <figure>
-    <img src="images/IMG-20240505-WA0003.jpg" alt="Nigeria Temple" width="300px">
+    <img src="images/IMG-20240505-WA0003.jpg" alt="Nigeria Temple" width="300">
     <figcaption>Nigeria Temple</figcaption>
     </figure>
 
     <figure>
-    <img src="images/IMG-20240505-WA0005.jpg" alt="Ghana Temple" width="300px">
+    <img src="images/IMG-20240505-WA0005.jpg" alt="Ghana Temple" width="300">
     <figcaption>Ghana Temple</figcaption>
     </figure>
 
     <figure>
-    <img src="images/IMG-20240505-WA0006.jpg" alt="Atlanta Temple" width="300px">
+    <img src="images/IMG-20240505-WA0006.jpg" alt="Atlanta Temple" width="300">
     <figcaption>Atlanta Temple</figcaption>
      </figure>
 
      <figure>
-    <img src="images/IMG-20240505-WA0007.jpg" alt="Apia Temple" width="300px">
+    <img src="images/IMG-20240505-WA0007.jpg" alt="Apia Temple" width="300">
     <figcaption>Apia Temple</figcaption>
     </figure>
 
     <figure>
-    <img src="images/IMG-20240505-WA0008.jpg" alt="Alaska Temple" width="300px">
+    <img src="images/IMG-20240505-WA0008.jpg" alt="Alaska Temple" width="300">
     <figcaption>Alaska Temple</figcaption>
     </figure>
 
     <figure>
-    <img src="images/IMG-20240505-WA0009.jpg" alt="Samoa Temple" width="300px">
+    <img src="images/IMG-20240505-WA0009.jpg" alt="Samoa Temple" width="300">
     <figcaption>Samoa Temple</figcaption>
     </figure>
 
     <figure>
-    <img src="images/IMG-20240505-WA0010.jpg" alt="Birmingham Temple" width="300px">
+    <img src="images/IMG-20240505-WA0010.jpg" alt="Birmingham Temple" width="300">
     <figcaption>Birmingham Temple</figcaption>
     </figure>
 
