--- a/temples.html
+++ b/temples.html
@@ -73,7 +73,7 @@
     </figure>
 
     <figure>
-    <img src="images/IMG-20240505-WA0014.jpg" alt="Vanezuela Temple" width="300px">
+    <img src="images/IMG-20240505-WA0014.jpg" alt="Vanezuela Temple" width="300">
     <figcaption>Vanezuela Temple</figcaption>
     </figure>
      </div>
@@ -83,6 +83,6 @@
     <p class="copyright">@ <span id="currentyear"></span>💕 Prayer Marangwanda💕 South Africa </p>
     <p class="lastModified">Last Modification:  <span id="lastModified"></span></p>
 </footer>
-<script defer="defer" src="script/scripts.js"></script>
+<script defer="defer" src="script/temples.js"></script>
 </body>
 </html>
