--- a/temples.html
+++ b/temples.html
@@ -83,6 +83,6 @@
     <p class="copyright">@ <span id="currentyear"></span>💕 Prayer Marangwanda💕 South Africa </p>
     <p class="lastModified">Last Modification:  <span id="lastModified"></span></p>
 </footer>
-<script defer="defer" src="script/temples.js"></script>
+<script defer="defer" src="scripts/temples.js"></script>
 </body>
 </html>
