--- a/place.html
+++ b/place.html
@@ -32,7 +32,7 @@
         </div>
         
         <div class="weather">
-            <h2>Weather <img src="images/1530391_weather_clouds_sun_sunny_icon.svg" width="50"></h2>
+            <h2>Weather <img class="icon" scr="images/1530391_weather_clouds_sun_sunny_icon.svg" width="50"></h2>
             <ul id="weatherList"></ul>
         </div>
     </main>
