--- a/place.html
+++ b/place.html
@@ -32,7 +32,8 @@
         </div>
         
         <div class="weather">
-            <h2>Weather <img class="icon" scr="images/1530391_weather_clouds_sun_sunny_icon.svg" alt="clouds sunny icon"></h2>
+            <h2>Weather </h2>
+                <img class="icon" scr="images/1530391_weather_clouds_sun_sunny_icon.svg" alt="clouds sunny icon">
             <ul id="weatherList"></ul>
         </div>
     </main>
