--- a/place.html
+++ b/place.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,300;0,400;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/place.css">
     <link rel="stylesheet" href="styles/place-large.css">
-    <script defer="defer" src="script/place.js"></script>
+    <script defer="defer" src="scripts/place.js"></script>
     <title>South Africa</title>
 </head>
 <body>
