--- a/place.html
+++ b/place.html
@@ -1,11 +1,16 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>South Africa</title>
-    <link rel="stylesheet" href="styles/place-large.css">
+    <meta name="description" content="The subject of the page is about a country or place where you live or have visited or wish to visit.">
+     <meta name="author" content="Prayer Marangwanda">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,300;0,400;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/place.css">
+    <link rel="stylesheet" href="styles/place-large.css">
 </head>
 <body>
     <header>
