--- a/place.html
+++ b/place.html
@@ -38,6 +38,19 @@
         <p><b>Calling Code:</b> +27</p>
         <p><b>Internet TLD: </b> .za</p>
     </section>
+
+        
+    <section class="data">
+        <h2>Data</h2>
+        <p> <b>Area:</b>   90,410 sq km</p>
+        <p> <b>Population:</b> 89,747,663</p>
+        <p><b>Capital:</b>  Pretoria</p>
+        <p><b>Language:</b>  Tswana</p>
+        <p> <b>Currency:</b> South African Rand</p>
+        <p><b>Time Zone:</b>  SAST</p>
+        <p><b>Calling Code:</b> +27</p>
+        <p><b>Internet TLD: </b> .za</p>
+    </section>
     <section class="weather">
         <h2>Weather <img src="images/1530391_weather_clouds_sun_sunny_icon.svg" width="50"></h2>
         <P> <b>Temperature:</b>  12°C</p>
