--- a/place.html
+++ b/place.html
@@ -22,7 +22,7 @@
             <picture>
                 <source srcset="images/hero-large.webp" media="(min-width: 1000px)">
                 <source srcset="images/hero-medium.webp" media="(min-width: 500px)">
-                <img src="images/hero-small.webp" alt="Temple name and location" width="500" height="250"> 
+                <img src="images/hero-small.webp" alt="wild-animals" width="500" height="250"> 
             </picture>
 
 </div>
@@ -52,7 +52,8 @@
         <p><b>Internet TLD: </b> .za</p>
     </section>
     <section class="weather">
-        <h2>Weather <img src="images/1530391_weather_clouds_sun_sunny_icon.svg" width="50"></h2>
+        <h2>Weather</h2>
+            <img src="images/1530391_weather_clouds_sun_sunny_icon.svg" alt="clouds-sun-sunny">
         <P> <b>Temperature:</b>  12°C</p>
         <p> <b>Conditions: </b>  Clear</p>
         <p> <b>Wind: </b>        5 km/h</p>
