--- a/form.html
+++ b/form.html
@@ -21,7 +21,7 @@
      <p>Product Name</p>
     <select name="products" id="products">
     <option value="selectaProduct">Select a Product...</option>
-    <option value=""></option><br><br>
+    <option value=""></option>
      </select>
 
 <!--ovarall rating-->
@@ -55,29 +55,35 @@
 
 <!--date of installion-->
      <p>Date of Installation</p>
-     <input type="date" id="dates" name="dates" value="mm/dd/yyyy"/><br><br>
-
+     <input type="date" id="dates" name="dates" value="mm/dd/yyyy"/>
+ <br>
 <!--useful features-->     
      <p>Which features did you find useful in the product?</p>
      <p class="change">(check all that apply)</p>
      <input type="checkbox" id="lasting" name="lasting" value="">
-     <label for="feature1">Durability </label><br>
+     <label for="feature1">Durability </label>
+        <br>
 
      <input type="checkbox" id="usability" name="usability" value="">
-     <label for="feature2">Ease of Use </label><br>
+     <label for="feature2">Ease of Use </label>
+        <br>
 
      <input type="checkbox" id="show" name="show" value="">
-     <label for="feature3">Performance </label><br>
+     <label for="feature3">Performance </label>
+        <br>
 
      <input type="checkbox" id="plan" name="plan" value="">
-     <label for="feature4">Design </label><br><br>
+     <label for="feature4">Design </label>
+        <br>
 
 
     <p>Written Review <span class="chang">(Optional)</span></p>
-    <textarea name="review" id="reviews"></textarea><br><br>
+    <textarea name="review" id="reviews"></textarea>
+        <br>
      
     <p>Your Name <span class="chang">(Optional)</span></p>
-    <input type="text" id="sms" name="sms" value=""><br><br>
+    <input type="text" id="sms" name="sms" value="">
+        <br>
 
     <input type="submit" id="giveIn" name="giveIn" value="Post Review">
 
