--- a/form.html
+++ b/form.html
@@ -61,19 +61,19 @@
      <p>Which features did you find useful in the product?</p>
      <p class="change">(check all that apply)</p>
      <input type="checkbox" id="lasting" name="lasting" value="">
-     <label for="feature1">Durability </label>
+     <label for="lasting">Durability </label>
         <br>
 
      <input type="checkbox" id="usability" name="usability" value="">
-     <label for="feature2">Ease of Use </label>
+     <label for="usability">Ease of Use </label>
         <br>
 
      <input type="checkbox" id="show" name="show" value="">
-     <label for="feature3">Performance </label>
+     <label for="show">Performance </label>
         <br>
 
      <input type="checkbox" id="plan" name="plan" value="">
-     <label for="feature4">Design </label>
+     <label for="plan">Design </label>
         <br>
 
 
