--- a/form.html
+++ b/form.html
@@ -54,7 +54,7 @@
 
 <!--date of installion-->
      <p>Date of Installation</p>
-     <input type="date" id="dates" name="dates" value="mm/dd/yyyy"/>
+     <input type="date" id="date" name="date">
  <br>
 <!--useful features-->     
      <p>Which features did you find useful in the product?</p>
