--- a/Project/project.html
+++ b/Project/project.html
@@ -1,1 +1,29 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>wireframes</title>
+    <link rel="stylesheet" href="styles/project.css">
+    <link rel="stylesheet" href="styles/project.large.css">
+</head>
+<body>
+ <header>
+    <h1>Header</h1>
+ </header>   
+ <nav>
+    <h2>Navigation</h2>
+ </nav>
+ <section>
+    <aside>
+        <h2>Left side</h2>
+    </aside>
+    <aside>
+       <h2>Right side bar</h2>
+    </aside>
+ </section>
+ <footer>
+    <h2>Footer</h2>
+ </footer>
+</body>
+</html>
