--- a/Project/shoping.html
+++ b/Project/shoping.html
@@ -224,6 +224,6 @@
     <p class="copyright"> @<span id="currentyear"></span>🤍 Prayer Marangwanda🤍 South Africa </p>
     <p class="lastModified">Last Modification:  <span id="lastModified"></span></p>
 </footer>
-<script defer="defer" scr="scripts/final-project.js"></script>
+<script defer="defer" src="scripts/final-project.js"></script>
 </body>
 </html>
