--- a/Project/final-project.html
+++ b/Project/final-project.html
@@ -42,7 +42,7 @@
   <p class="copyright">@ <span id="currentyear"></span>💕 Prayer Marangwanda💕 South Africa </p>
   <p class="lastModified">Last Modification:  <span id="lastModified"></span></p>
 </footer>
-<script defer="defer" src="scripts/final-project.js"></script>
+<script src="scripts/final-project.js"></script>
 </body>
 </html>
 
